[project]
name = "eml2pdf"
version = "0.3.0"
description = "CLI tool to extract PDF attachments and convert email bodies from .eml files to PDFs. Outputs full receipt metadata as CSV."
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "weasyprint>=60.1",
    "tqdm",
    "beautifulsoup4",
    "price-parser",
    "dateparser"
]

[project.scripts]
eml2pdf = "eml2pdf:main"